[gd_scene format=3 uid="uid://cj0amp2lxwem5"]

[ext_resource type="Script" uid="uid://fduhdjv3ekah" path="res://views/editor/containers/page_controls/page_controls.gd" id="1_8tmw1"]

[node name="PageControls" type="Control" unique_id=352413597 node_paths=PackedStringArray("menu_button", "next_page_button", "page_count_label", "prev_page_button", "framerate_slider", "framerate_label", "play_button", "onion_skin_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8tmw1")
menu_button = NodePath("Panel/ToolbarContents/MenuButton")
next_page_button = NodePath("Panel/ToolbarContents/FrameControls/NextButton")
page_count_label = NodePath("Panel/ToolbarContents/FrameControls/PageCount")
prev_page_button = NodePath("Panel/ToolbarContents/FrameControls/PrevButton")
framerate_slider = NodePath("Panel/ToolbarContents/FrameControls/FRContainer/FRSlider")
framerate_label = NodePath("Panel/ToolbarContents/FrameControls/FRContainer/Framerate")
play_button = NodePath("Panel/ToolbarContents/FrameControls/PlayButton")
onion_skin_button = NodePath("Panel/ToolbarContents/FrameControls/OnionSkinButton")

[node name="Panel" type="Panel" parent="." unique_id=1178714550]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ToolbarContents" type="HBoxContainer" parent="Panel" unique_id=296900544]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuButton" type="Button" parent="Panel/ToolbarContents" unique_id=835707323]
layout_mode = 2
size_flags_horizontal = 0
text = "Menu"

[node name="FrameControls" type="HBoxContainer" parent="Panel/ToolbarContents" unique_id=1697879641]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="PrevButton" type="Button" parent="Panel/ToolbarContents/FrameControls" unique_id=806348556]
layout_mode = 2
text = "Previous Page"

[node name="PageCount" type="Label" parent="Panel/ToolbarContents/FrameControls" unique_id=2038342360]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "1/1"
horizontal_alignment = 1

[node name="NextButton" type="Button" parent="Panel/ToolbarContents/FrameControls" unique_id=690276461]
layout_mode = 2
text = "Next Page"

[node name="FRContainer" type="HBoxContainer" parent="Panel/ToolbarContents/FrameControls" unique_id=645195669]
layout_mode = 2
size_flags_vertical = 4

[node name="FRSlider" type="HSlider" parent="Panel/ToolbarContents/FrameControls/FRContainer" unique_id=1220768247]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
min_value = 1.0
max_value = 12.0
value = 1.0
rounded = true
tick_count = 1

[node name="Framerate" type="Label" parent="Panel/ToolbarContents/FrameControls/FRContainer" unique_id=2030443127]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
text = "1"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="Panel/ToolbarContents/FrameControls" unique_id=488848150]
layout_mode = 2
text = "Play"

[node name="OnionSkinButton" type="Button" parent="Panel/ToolbarContents/FrameControls"]
layout_mode = 2
toggle_mode = true
text = "Onion Skin"

[connection signal="pressed" from="Panel/ToolbarContents/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Panel/ToolbarContents/FrameControls/PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="Panel/ToolbarContents/FrameControls/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="value_changed" from="Panel/ToolbarContents/FrameControls/FRContainer/FRSlider" to="." method="_on_slider_value_changed"]
[connection signal="pressed" from="Panel/ToolbarContents/FrameControls/PlayButton" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Panel/ToolbarContents/FrameControls/OnionSkinButton" to="." method="_on_onion_skin_pressed"]
